--- a/src/style/style.css
+++ b/src/style/style.css
@@ -284,3 +284,14 @@ body {
     padding: var(--spacing-lg);
     place-items: center;
 }
+
+.add-task {
+    text-align: center;
+}
+
+.add-task-container {
+    display: flex;
+    justify-content: center;
+    padding: var(--spacing-md);
+    border-bottom: 1px solid var(--color-border);
+}
